# balatro-vs

./: .gitignore  HOW2PLAY.MD  README.md  utils
.github/workflows/: release-android.yml  release-thunderstore.yml  release.yml
core/: Cargo.toml  build.rs
core/copy_lua_patchs/: Cargo.toml
core/copy_lua_patchs/src/: main.rs
core/src/: lib.rs  lua_patcher.rs  macros.rs
core/src/modules/: bvs.rs  card_conf.rs  game_manipulation.rs  integrity.rs  mod.rs  network.rs  updater.rs
patchs/: back.toml  blind.toml  button_callbacks.toml  bvs.json  card.toml  cardarea.toml  common_events.toml  controller.toml  core.lua  core_interaction.lua  core_network.lua  game.toml  globals.lua  lume.lua  lurker.lua  main.toml  misc_functions.toml  state_events.toml  ui_definitions.toml  utils.lua
