[package]
name = "balatro-vs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["copy_lua_patchs"]

[lib]
name = "winmm"
crate-type = ["cdylib"]

[features]
with_integrity = []

# [build]
# target = "i686-pc-windows-msvc"

[build-dependencies.forward-dll]
version = "0.1.13"

[dependencies]
retour = { version = "0.3.1", features = ["static-detour"] }
mlua = { version = "0.10.2", features = ["lua51", "module", "async", "macros"] }
once_cell = "1.8.0"
tokio = { version = "1.16.1", features = ["full"] }
matchbox_socket = { git = "https://github.com/Fcornaire/matchbox", branch = "develop-bvs"}
futures = "0.3.31"
futures-timer = "3.0.3"
serde = "1.0.216"
serde_json = "1.0.134"
bincode = "1.3.3"
itertools = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3.37"
rand = "0.8.5"
dirs = "6.0.0"
reqwest = { version = "0.12.14", features = ["json"] }
semver = "1.0.26"
zip = "2.3.0"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_LibraryLoader"]
